--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "out/main/index.js",
   "scripts": {
     "clean": "rm -rf dist out src/renderer/.next",
-    "dev": "yarn run build:electron && electron .",
+    "dev": "yarn run copy-icon && yarn run build:electron && electron .",
+    "copy-icon": "cp assets/icon.icns node_modules/electron/dist/Electron.app/Contents/Resources/electron.icns",
     "build": "run-s build:*",
     "build:renderer": "next build src/renderer && next export src/renderer -o out/renderer/out",
     "build:electron": "tsc -p src/main",
@@ -20,6 +21,7 @@
     "format:prettier": "prettier --write ."
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^5.10.0",
     "electron-is-dev": "latest",
     "electron-next": "latest",
     "react": "latest",
