--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
     "format:prettier": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@google-cloud/bigquery": "^5.10.0",
+    "@monaco-editor/react": "^4.3.1",
     "electron-is-dev": "latest",
     "electron-next": "latest",
+    "framer-motion": "^5",
+    "monaco-editor": "^0.31.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
