--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "@emotion/styled": "^11.6.0",
     "@google-cloud/bigquery": "^5.10.0",
     "@monaco-editor/react": "^4.3.1",
+    "codemirror": "^5.65.1",
     "electron-is-dev": "latest",
     "electron-next": "latest",
     "framer-motion": "^5",
     "monaco-editor": "^0.31.1",
     "react": "latest",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "latest",
     "react-icons": "^4.3.1",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "sql-formatter": "hokaccha/sql-formatter#dist"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
