--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@google-cloud/bigquery": "^5.10.0",
     "@monaco-editor/react": "^4.3.1",
     "codemirror": "^5.65.1",
@@ -34,7 +37,6 @@
     "react": "latest",
     "react-codemirror2": "^7.2.1",
     "react-dom": "latest",
-    "react-icons": "^4.3.1",
     "react-use": "^17.3.2",
     "sql-formatter": "hokaccha/sql-formatter#dist",
     "uuid": "^8.3.2"
