--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:renderer": "next build src/renderer && next export src/renderer -o out/renderer/out",
     "build:electron": "tsc -p src/main",
     "dist": "yarn run build && electron-builder",
+    "test": "jest",
     "lint": "run-p -l -c --aggregate-output lint:*",
     "lint:tsc-main": "tsc --noEmit -p src/main",
     "lint:tsc-renderer": "tsc --noEmit -p src/renderer",
@@ -30,6 +31,7 @@
     "@google-cloud/bigquery": "^5.10.0",
     "@monaco-editor/react": "^4.3.1",
     "codemirror": "^5.65.1",
+    "deepmerge": "^4.2.2",
     "electron-is-dev": "latest",
     "electron-next": "latest",
     "framer-motion": "^5",
@@ -39,10 +41,12 @@
     "react-dom": "latest",
     "react-use": "^17.3.2",
     "sql-formatter": "hokaccha/sql-formatter#dist",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.5",
+    "@types/jest": "^27.4.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -57,9 +61,11 @@
     "eslint-plugin-import": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
+    "jest": "^27.5.1",
     "next": "latest",
     "npm-run-all": "latest",
     "prettier": "latest",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "latest"
   }
