--- a/package.json
+++ b/package.json
@@ -22,52 +22,52 @@
     "format:prettier": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@google-cloud/bigquery": "^5.10.0",
-    "@monaco-editor/react": "^4.3.1",
-    "codemirror": "^5.65.1",
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@google-cloud/bigquery": "^5.12.0",
+    "@monaco-editor/react": "^4.4.1",
+    "codemirror": "^5.65.2",
     "deepmerge": "^4.2.2",
     "electron-is-dev": "latest",
     "electron-next": "latest",
-    "framer-motion": "^5",
-    "monaco-editor": "^0.31.1",
+    "framer-motion": "^6.2.8",
+    "monaco-editor": "^0.33.0",
     "pretty-bytes": "^6.0.0",
-    "react": "latest",
+    "react": "18.0.0",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "latest",
+    "react-dom": "18.0.0",
     "react-use": "^17.3.2",
     "sql-formatter": "hokaccha/sql-formatter#dist",
     "uuid": "^8.3.2",
-    "zod": "^3.11.6"
+    "zod": "^3.14.3"
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.5",
-    "@types/jest": "^27.4.0",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "electron": "latest",
-    "electron-builder": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "latest",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "electron": "18.0.1",
+    "electron-builder": "22.14.13",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "jest": "^27.5.1",
-    "next": "latest",
+    "next": "12.1.4",
     "npm-run-all": "latest",
-    "prettier": "latest",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "latest"
+    "prettier": "2.6.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "4.6.3"
   }
 }
