--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.0.0",
     "react-use": "^17.3.2",
     "sql-formatter": "hokaccha/sql-formatter#dist",
+    "swr": "^1.2.2",
     "uuid": "^8.3.2",
     "zod": "^3.14.3"
   },
