--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@google-cloud/bigquery": "^5.12.0",
+    "@hokaccha/sql-formatter": "^1.2.0",
     "@monaco-editor/react": "^4.4.1",
     "codemirror": "^5.65.2",
     "deepmerge": "^4.2.2",
@@ -41,7 +42,6 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "18.0.0",
     "react-use": "^17.3.2",
-    "sql-formatter": "hokaccha/sql-formatter#dist",
     "swr": "^1.2.2",
     "uuid": "^8.3.2",
     "zod": "^3.14.3"
