--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-is-dev": "latest",
     "electron-next": "latest",
     "framer-motion": "^6.3.0",
+    "immer": "^9.0.12",
     "monaco-editor": "^0.33.0",
     "pretty-bytes": "^6.0.0",
     "react": "18.0.0",
